--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs --clean-cache"
+    "docs:build": "vuepress build docs"
   },
   "devDependencies": {
     "vuepress": "^2.0.0-beta.48",
