--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,11 +33,12 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-
+      - name: set registry
+        run: yarn config set registry https://registry.npm.taobao.org
       # 如果缓存没有命中，安装依赖
       - name: Install dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: yarn --frozen-lockfile --registry https://registry.npmjs.org/
+        run: yarn --frozen-lockfile
 
       # 运行构建脚本
       - name: Build VuePress site
