--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,6 +38,8 @@ jobs:
         if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn --frozen-lockfile
 
+      - name: test
+        run: env | grep -i proxy
       # 运行构建脚本
       - name: Build VuePress site
         run: yarn docs:build
