--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
-    "vuepress": "^2.0.0-beta.47",
+    "@vuepress/client": "^2.0.0-beta.42",
+    "vue": "^3.2.36",
+    "vuepress": "2.0.0-beta.48",
     "vuepress-theme-gungnir": "^2.0.0-alpha.25"
   }
 }
