--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "vue": "^3.2.36",
     "vuepress": "2.0.0-beta.48",
     "vuepress-theme-gungnir": "^2.0.0-alpha.25"
+  },
+  "dependencies": {
+    "oh-vue-icons": "1.0.0-rc3"
   }
 }
