--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vuepress-theme-gungnir": "^2.0.0-alpha.25"
   },
   "dependencies": {
-    "oh-vue-icons": "1.0.0-rc3"
+    "oh-vue-icons": "1.0.0-rc3",
+    "vue-router": "^4.1.1"
   }
 }
