--- a/package.json
+++ b/package.json
@@ -8,13 +8,9 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
-    "@vuepress/client": "^2.0.0-beta.42",
-    "vue": "^3.2.36",
+    "@vuepress/client": "2.0.0-beta.48",
+    "vue": "^3.2.37",
     "vuepress": "2.0.0-beta.48",
-    "vuepress-theme-gungnir": "^2.0.0-alpha.25"
-  },
-  "dependencies": {
-    "oh-vue-icons": "1.0.0-rc3",
-    "vue-router": "^4.1.1"
+    "vuepress-theme-gungnir": "2.0.0-alpha.25"
   }
 }
